<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group
    android:id="@+id/lateral_menu"
    android:checkableBehavior="single">
    <item
      android:id="@+id/events"
      android:icon="@drawable/events_icon"
      android:title="@string/events" />
    <item
      android:id="@+id/notify"
      android:icon="@drawable/ic_notify_icon"
      android:title="@string/notify" />
    <item
      android:id="@+id/claim"
      android:icon="@drawable/claim_icon"
      android:title="@string/claim" />
    <item
      android:id="@+id/services"
      android:icon="@drawable/ic_dates_icon"
      android:title="@string/services" />
    <item
      android:id="@+id/personal"
      android:icon="@drawable/ic_icon_personal"
      android:title="@string/personal" />

    <item
      android:id="@+id/exit"
      android:icon="@drawable/ic_exit_to_app_black_24dp"
      android:title="@string/exit" />

    <item
      android:id="@+id/webViewMenu"
      android:icon="@drawable/internet"
      android:title="@string/internet_menu"/>
  </group>
</menu>