<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foregroundGravity="center"
    android:layout_centerInParent="true"
    android:alpha="0.8"
    android:theme="@style/Base.CardView"
    app:cardBackgroundColor="@color/card_view_background"
    app:cardCornerRadius="30dp">





    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_order_title"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:layout_marginStart="50dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/igOrderTitle"
        android:textSize="18sp" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:background="@color/card_view_background"
        android:columnCount="2"
        android:longClickable="true"
        android:rowCount="5">


        <com.google.android.material.textview.MaterialTextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:text="@string/date_order"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:drawablePadding="2dp"
            android:inputType="phone"
            android:text="@string/igDate"
            android:textAlignment="textEnd"
            android:textColor="@color/sampleLighter"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/order_number"

            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_oder_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginStart="20dp"
            android:autoSizeTextType="uniform"
            android:text="@string/igOrderNumber"
            android:textColor="@color/blueDotlinked"
            android:textSize="14sp"
            tools:targetApi="o" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/status"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginStart="20dp"
            android:text="@string/igOrderStatus"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/order_num_observations"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_order_inter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_marginStart="60dp"
            android:text="@string/igNumber"
            android:textAlignment="textEnd"
            android:textSize="14sp" />


    </GridLayout>
</androidx.cardview.widget.CardView>