<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginEnd="0dp"
  android:background="@drawable/bitmap"
  tools:context=".activities.login.LoginActivity">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="120dp"
      android:layout_height="150dp"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="40dp"
      android:contentDescription="@string/logo_enterprise_des"
      app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_email"
      android:layout_width="286dp"
      android:layout_height="57dp"
      android:layout_alignParentTop="@id/checkRememberMe"
      android:layout_marginStart="60dp"
      android:layout_marginTop="220dp"
      android:hint="@string/user_name"
      app:boxCornerRadiusBottomEnd="5sp">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/ic_account_circle_black_24dp"
          android:drawablePadding="15dp"
          android:inputType="textEmailAddress"
          android:textAlignment="textStart"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1"
          android:textSize="20sp"
          tools:text="email address" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
      android:id="@+id/checkRememberMe"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="150dp"
      android:layout_marginTop="350dp"
      android:text="@string/remember_me"
      android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatCheckBox
      android:id="@+id/checkUseFingerprint"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="150dp"
      android:layout_marginTop="380dp"
      android:text="@string/use_fingerprint"
      android:textAlignment="center" />

    <TextView
      android:id="@+id/forgotPass"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="165dp"
      android:layout_marginTop="420dp"
      android:text="@string/forgot_pass" />


    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_password"
      android:layout_width="288dp"
      android:layout_height="61dp"
      android:layout_marginStart="60dp"
      android:layout_marginTop="300dp"
      android:hint="@string/password"
      app:boxCornerRadiusBottomEnd="5sp"
      app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/key"
          android:drawablePadding="15dp"
          android:inputType="textPassword"
          android:textAlignment="textStart"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1"
          android:textSize="20sp"
          tools:text="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--<EditText-->
    <!--android:id="@+id/userEmail"-->
    <!--android:layout_width="250dp"-->
    <!--android:layout_height="40dp"-->
    <!--android:background="#11000000"-->
    <!--android:ems="10"-->
    <!--android:hint="@string/email"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:textSize="16sp"-->
    <!--android:layout_marginBottom="35dp"-->
    <!--android:layout_above="@+id/userPassword"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:drawableStart="@drawable/ic_action_mail"-->
    <!--android:drawableLeft="@drawable/ic_action_mail" />-->

    <!--<EditText-->
    <!--android:id="@+id/userPassword"-->
    <!--android:layout_width="250dp"-->
    <!--android:layout_height="40dp"-->
    <!--android:layout_alignStart="@+id/userEmail"-->
    <!--android:layout_alignLeft="@+id/userEmail"-->
    <!--android:layout_alignBottom="@+id/btn_access"-->
    <!--android:layout_marginBottom="130dp"-->
    <!--android:background="#11000000"-->
    <!--android:drawableStart="@drawable/ic_action_pass"-->
    <!--android:drawableLeft="@drawable/ic_action_pass"-->
    <!--android:ems="10"-->
    <!--android:hint="@string/password"-->
    <!--android:inputType="textPassword" />-->

    <androidx.cardview.widget.CardView
      android:id="@+id/cv_access"
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:layout_above="@+id/tv_backToLogin"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="20dp"
      app:cardBackgroundColor="@color/colorAccent"
      app:cardCornerRadius="25dp"
      app:cardElevation="10dp">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

            <TextView
              android:id="@+id/textView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:text="@string/login"
              android:textColor="#fff"
              android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
      android:id="@+id/tv_backToLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/linearLayout"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="10dp"
      android:onClick="registerUser"
      android:text="@string/register_here"
      android:textSize="20sp" />

    <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_alignStart="@+id/imageView"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="0dp"
      android:layout_marginBottom="15dp"
      android:orientation="horizontal">

        <ImageView
          android:id="@+id/twitter_img"
          android:layout_width="30dp"
          android:layout_height="wrap_content"
          android:contentDescription="@string/twitter_img"
          app:srcCompat="@drawable/twitter" />

        <ImageView
          android:id="@+id/instagram_img"
          android:layout_width="30dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:contentDescription="@string/instagram_img"
          app:srcCompat="@drawable/instagram" />

        <ImageView
          android:id="@+id/facebook_img"
          android:layout_width="30dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:contentDescription="@string/facebook_img"
          app:srcCompat="@drawable/facebook" />
    </LinearLayout>

</RelativeLayout>