<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/bitmap"
  tools:context=".activities.login.AccessActivity">

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="120dp"
    android:layout_height="150dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginBottom="500dp"
    android:contentDescription="@string/app_name"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:srcCompat="@drawable/logo" />

  <androidx.appcompat.widget.AppCompatSpinner
    android:id="@+id/sp_roles"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/imageView"
    android:prompt="@string/spinner_prompt"
    android:textAlignment="textStart"
    android:layout_marginTop="65dp"
    app:layout_constraintLeft_toLeftOf="@id/lblRol"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_welcomeUser"
    tools:listitem="@android:layout/simple_spinner_item" />

  <androidx.appcompat.widget.AppCompatSpinner
    android:id="@+id/spn_companiesByRol"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/imageView"
    android:layout_marginTop="20dp"
    android:textAlignment="textStart"
    app:layout_constraintLeft_toLeftOf="@id/lblCompany"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/sp_roles"
    tools:listitem="@android:layout/simple_spinner_item">

  </androidx.appcompat.widget.AppCompatSpinner>

  <androidx.cardview.widget.CardView
    android:id="@+id/cv_access"
    android:layout_width="300dp"
    android:layout_height="50dp"
    android:layout_centerHorizontal="true"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="25dp"
    android:layout_marginTop="90dp"
    app:cardElevation="10dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spn_companiesByRol">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignStart="@+id/cv_access">

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/access"
        android:textColor="#fff"
        android:textSize="25sp" />
    </RelativeLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/cv_fingerprint"
    android:layout_width="300dp"
    android:layout_height="50dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    android:visibility="gone"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="25dp"
    android:layout_marginBottom="25dp"
    app:cardElevation="10dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cv_access">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignStart="@+id/cv_fingerprint">

      <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableStart="@drawable/fingerprint_black_24x24"
        android:drawablePadding="5dp"
        android:gravity="start"
        android:text="@string/finger_print"
        android:textColor="#fff"
        android:textSize="25sp" />
    </RelativeLayout>
  </androidx.cardview.widget.CardView>

  <com.google.android.material.checkbox.MaterialCheckBox
    android:id="@+id/checkNotRememberMe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    android:text="@string/not_remember_me"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cv_fingerprint" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_welcomeUser"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="350dp"
    android:text="@string/well_come_user"
    android:textAlignment="center"
    android:layout_marginTop="20dp"
    android:textSize="20sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/imageView" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/lblRol"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="@dimen/company_margin"
    android:text="@string/rol"
    android:textAlignment="textEnd"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_welcomeUser" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/lblCompany"
    android:layout_width="67dp"
    android:layout_height="21dp"
    android:layout_alignParentStart="true"
    android:text="@string/company"
    android:layout_marginStart="60dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="@dimen/company_margin"
    android:textAlignment="textEnd"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/lblRol" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_backToLogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="20dp"
    android:text="@string/not_user"
    android:textSize="15sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/checkNotRememberMe" />

</androidx.constraintlayout.widget.ConstraintLayout>